# vqc-molecule-gym

./: .gitignore  C 0-pyscf.chk  C 0_metadata.json  H 0-pyscf.chk  H 0_metadata.json  LICENSE  Li 0-pyscf.chk  Li 0_metadata.json  README.md  index.html  pyproject.toml  resources
.github/workflows/: deploy-docs.yml
assets/css/: style.css
assets/data/: algo_comparison.json  data.js  overview.json  pes.json  reward_metrics.json  summary.json
assets/js/: dashboard.js
scripts/: build_dashboard_data.py  debug_cudaqx_molecule.py  eval_ppo_v0.py  evaluate_action.py  generate_tasks.py  make_leaderboard.py  precompute_references.py  run_baseline.py  run_beam_ceiling_check_resume.py  train_ppo_v0.py
tests/integration/: test_direct_energy.py  test_verifiers_adapter.py
tests/unit/: test_action_validator.py  test_baseline_agents.py  test_benchmarks.py  test_cudaqx_driver.py  test_curricula.py  test_fermion_matrix.py  test_leaderboard.py  test_parser_reward.py  test_ppo_env.py  test_reward_regression.py  test_run_baseline.py  test_schemas.py
vqc_molecule_gym/: __init__.py  benchmarks.py  curricula.py
vqc_molecule_gym/baselines/: __init__.py  beam_search_agent.py  greedy_agent.py  random_agent.py  search_helpers.py  types.py
vqc_molecule_gym/chemistry/: __init__.py  benchmarks.py  cudaqx_driver.py  fermion_matrix.py  pyscf_driver.py
vqc_molecule_gym/circuits/: __init__.py  cudaq_builder.py  hartree_fock.py
vqc_molecule_gym/envs/: __init__.py  verifiers_adapter.py
vqc_molecule_gym/evaluators/: __init__.py  direct_energy.py
vqc_molecule_gym/operators/: __init__.py  (+1 more)
(+19 files in other folders)
